--- a/Pipfile
+++ b/Pipfile
@@ -4,51 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-kedro = "==0.18.1"
-anyconfig = "==0.10.1"
-arrow = "==1.2.2"
-binaryornot = "==0.4.4"
-cachetools = "==4.2.4"
-certifi = "==2021.10.8"
-chardet = "==4.0.0"
-charset-normalizer = "==2.0.12"
-click = "==8.1.3"
-cookiecutter = "==1.7.3"
-distlib = "==0.3.4"
-dynaconf = "==3.1.8"
-filelock = "==3.7.0"
-fsspec = "==2022.1.0"
-gitdb = "==4.0.9"
-idna = "==3.3"
-jinja2-time = "==0.2.0"
-jmespath = "==0.10.0"
-pep517 = "==0.12.0"
-pip-tools = "==6.6.1"
-pipenv = "==2022.5.2"
-pkg-resources = "==0.0.0"
-platformdirs = "==2.5.2"
-pluggy = "==1.0.0"
-poyo = "==0.5.0"
-python-dateutil = "==2.8.2"
-python-json-logger = "==2.0.2"
-python-slugify = "==6.1.2"
-requests = "==2.27.1"
-rope = "==0.21.1"
-six = "==1.16.0"
-smmap = "==5.0.0"
-text-unidecode = "==1.3"
-toml = "==0.10.2"
-tomli = "==2.0.1"
-toposort = "==1.7"
-urllib3 = "==1.26.9"
-virtualenv = "==20.14.1"
-virtualenv-clone = "==0.5.7"
-GitPython = "==3.1.27"
-Jinja2 = "==3.1.2"
-MarkupSafe = "==2.1.1"
-PyYAML = "==5.4.1"
+kedro = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
