--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-kedro = "*"
+kedro = {version = "==0.18.1", extras = ["pandas.csvdataset"]}
+pandas = "*"
+openpyxl = "*"
+black = "~=22.0"
+flake8 = "<4.0,>=3.7.9"
+ipython = ">=7.31.1,<8.0"
+isort = "~=5.0"
+jupyter = "~=1.0"
+jupyterlab = "~=3.0"
+kedro-telemetry = "~=0.2.0"
+nbstripout = "~=0.4"
+pytest-cov = "~=3.0"
+pytest-mock = ">=1.7.1,<2.0"
+pytest = "~=6.2"
 
 [dev-packages]
 
