1. The fourth node is aded to write in excel file 2. The pipeline has been updated by adding the fourth node 3. Catalog is updated with rules for save file

--- a/data-analysis-app/conf/base/catalog.yml
+++ b/data-analysis-app/conf/base/catalog.yml
@@ -16,3 +16,16 @@ data_for_mapping:
   filepath: data/01_raw/mapping.xlsx
   load_args:
     engine: openpyxl
+
+mapped_data:
+  type: pandas.ExcelDataSet
+  filepath: data/08_reporting/output.xlsx
+  load_args:
+    engine: openpyxl
+  save_args:
+    filepath: data/08_reporting/output.xlsx
+    if_sheet_exists: replace
+    engine: openpyxl
+    float_format: "%.3f"
+    index: False
+
