1. Added node to read structure from empty output file 2. Add config to load and save data in the catalog yaml 3. the pipeline is update with addin new node 4. pd.merge is used to update data for the output file

--- a/data-analysis-app/conf/base/catalog.yml
+++ b/data-analysis-app/conf/base/catalog.yml
@@ -22,10 +22,13 @@ mapped_data:
   filepath: data/08_reporting/output.xlsx
   load_args:
     engine: openpyxl
+
+save_mapped_data:
+  type: pandas.ExcelDataSet
+  filepath: data/08_reporting/output.xlsx
   save_args:
-    filepath: data/08_reporting/output.xlsx
-    if_sheet_exists: replace
     engine: openpyxl
     float_format: "%.3f"
     index: False
+
 
