1. The format dates fro str to datetime by pandas is added for xlsx file. 2. The separate def for parsing and formating date is added

--- a/data-analysis-app/conf/base/catalog.yml
+++ b/data-analysis-app/conf/base/catalog.yml
@@ -11,7 +11,7 @@ data_raw:
     sheet_name: Data
     convert_float: False
     dtype: {'Invoice no': int, 'PO number': int, 'Spend (SGD)': float}
-    parse_dates: ["Invoice date"]
+#    parse_dates: ["Invoice date"]
 
 data_for_mapping:
   type: pandas.ExcelDataSet
