--- a/Pipfile
+++ b/Pipfile
@@ -7,13 +7,11 @@ name = "pypi"
 kedro = {version = "==0.18.1", extras = ["pandas.csvdataset"]}
 pandas = "==1.4.2"
 openpyxl = "==3.0.10"
-black = "~=22.0"
-flake8 = "<4.0,>=3.7.9"
 ipython = ">=7.31.1,<8.0"
 isort = "~=5.0"
 jupyter = "~=1.0"
 jupyterlab = "~=3.0"
-kedro-telemetry = "~=0.2.0"
+kedro-telemetry = "==0.2.1"
 nbstripout = "~=0.4"
 pytest-cov = "~=3.0"
 pytest-mock = ">=1.7.1,<2.0"
@@ -21,6 +19,8 @@ pytest = "~=6.2"
 numpy = ">=1.18.5"
 
 [dev-packages]
+black = "~=22.0"
+flake8 = "<4.0,>=3.7.9"
 
 [requires]
 python_version = "3.10"
