--- a/data-analysis-app/conf/base/catalog.yml
+++ b/data-analysis-app/conf/base/catalog.yml
@@ -7,7 +7,9 @@ data_raw:
 #  type: pandas.ExcelDataSet
 #  type: PartitionedDataSet
   type: data_analysis_app.extras.datasets.custom_dataset.CustomDatSet
-  filepath: data/${folders.raw}/${filename.csv_file}
+  filepath:
+    - data/${folders.raw}/${filename.csv_file}
+    - data/${folders.raw}/${filename.xlsx_file}
   path_to_file: data/${folders.raw}/${filename.xlsx_file}
 #  filepath: data/01_raw/data.csv
 #  path: data/${folders.raw}/${filename.csv_file}
